k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: primes
  labels:
    name: primes
