k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: primes-api-service
  namespace: primes
  labels:
    app: primes-api
    version: v1
spec:
  selector:
    app: primes-api
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  type: LoadBalancer
